[gd_scene load_steps=3 format=2]

[ext_resource path="res://Sprites/UI/Icons/Attacks/Force Field.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Consumables/Button Commands/Consumable.gd" type="Script" id=2]

[node name="Consumable" type="Button"]
margin_left = 8.0
margin_right = 88.0
margin_bottom = 103.0
rect_min_size = Vector2( 80, 95 )
icon = ExtResource( 1 )
flat = true
expand_icon = true
script = ExtResource( 2 )

[connection signal="mouse_entered" from="." to="." method="_on_Consumable_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Consumable_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_Consumable_pressed"]
